--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
   <app-navbar></app-navbar>
   <main class="flex-fill">
     <router-outlet></router-outlet>
+    <app-toast-container></app-toast-container>
   </main>
   <app-footer></app-footer>
 </div>
